--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-html {
+html, body {
   background-image: url('../images/tech.jpg');
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
+  height: 100%;
 }
 
 body {
