adding style file
this folder includes my style file

this folder includes my reset file

I linked these files from the head of all 3 html files

I had to add the tech.jpg image for the background

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-html, body {
+html {
   background-image: url('../images/tech.jpg');
   background-size: cover;
   background-attachment: fixed;
-  background-position: center;
-  height: 100%;
 }
 
 body {
