--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ section {
   width: 100%;
   max-width: 600px;
   overflow: hidden;
-  position: relative;
 }
 
 .slider {
@@ -85,11 +84,13 @@ section {
 .slider .slide {
   min-width: 100%;
   transition: opacity 0.5s ease-in-out;
-  opacity: 0;
+  opacity: 0; 
+  display: none; 
 }
 
 .slider .active {
   opacity: 1;
+  display: block; 
   transition: opacity 0.5s ease-in-out;
 }
 
