adding style file
this folder includes my style file

this folder includes my reset file

I linked these files from the head of all 3 html files

I had to add the tech.jpg image for the background

--- a/css/style.css
+++ b/css/style.css
@@ -182,10 +182,12 @@ body.about_me {
 .slide {
     min-width: 100%;
     transition: opacity 0.5s ease;
+    box-sizing: border-box;
 }
 
 .slide img {
     width: 100%;
+    display: block;
     border-radius: 10px;
 }
 
