--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ body.about_me {
 .slideshow {
     position: relative;
     width: 100%;
-    max-width: 600px; 
+    max-width: 600px;
     margin: auto;
     overflow: hidden;
     background-color: #f0f0f0;
@@ -187,6 +187,7 @@ body.about_me {
 
 .slide img {
     width: 100%;
+    height: auto;
     display: block;
     border-radius: 10px;
 }
