adding style file
this folder includes my style file

this folder includes my reset file

I linked these files from the head of all 3 html files

I had to add the tech.jpg image for the background

--- a/css/style.css
+++ b/css/style.css
@@ -173,21 +173,13 @@ body.about_me {
 
 .slider {
     display: flex;
-    transition: transform 0.5s ease;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    width: 100%;
 }
 
 .slide {
     min-width: 100%;
-    opacity: 1;
-    transition: opacity 0.5s ease;
+    display: none; 
     box-sizing: border-box;
-}
-
-.slide {
-    opacity: 1;
 }
 
 .slide img {
